--- a/todo.html
+++ b/todo.html
@@ -7,7 +7,7 @@
   <title>TODO LIST</title>
   <style>
     body {
-      background-image: url("https://cdn.magicdecor.in/com/2023/12/20172031/Elegant-Mount-Fuji-Scenery-Wallpaper-in-Japandi-Style.jpg"); /* Replace "path/to/your/image.jpg" with the actual path to your image */
+      background-image: url("assests/photo.jpg"); /* Replace "path/to/your/image.jpg" with the actual path to your image */
       background-size: cover; /* This property ensures that the background image covers the entire body */
       background-position: center;
       background-repeat: no-repeat; /* This property centers the background image */
